[project]
name = "vanna-bi"
version = "0.1.0"
description = "Vanna BI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
    "python-dotenv>=1.2.2",
    "vanna[chromadb,fastapi,mysql,openai]>=2.0.2",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true

[tool.fastapi]
entrypoint = "app.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
